-
Bug
-
Resolution: Done
-
P2: Important
-
4.7.3
-
C7 + 92_201107_02 Subcon (020.036) + Split view SHA 985ab91a31c6577146b72d1cd0a69fb9c4ff9977
-
6fb7a21fc5b7324456d210e2134ffe97ae245d2c
Preconditions:
QML application includes some TextInput elements. Tested with 'QMLTest' test application.
Test steps:
1. Tap some text input field.
Expected result:
Split view is opened without extra flashing.
Actual result:
Split view is opened with quite visible flashing.
Flashing can also be seen when the split view is closed.
- relates to
-
QTBUG-16572 Support partial input mode
-
- Closed
-