Visible flashing on QML app when split view is opened and closed

The root cause is that input widget is re-positioned twice;
once when keyboard opens and second time when window becomes visible.
This causes flicker.

Task-number: QTBUG-17979
Reviewed-by: Laszlo Agocs